.k8s/kustomize/live-autopilot/concepts.deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: concepts
  name: concepts
spec:
  clusterIP: None
  ports:
  - name: "5000"
    port: 5000
  selector:
    app: concepts
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: concepts
  name: concepts
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: concepts
  template:
    metadata:
      labels:
        app: concepts
    spec:
      containers:
      - env:
        - name: GET_HOSTS_FROM
          value: dns
        - name: GRAPHDB_PORT
          value: "7200"
        - name: GRAPHDB_REPO
          value: sdgs-data
        image: containers.officialstatistics.org/cslovell/sdg-docker-ontologies/concepts:v0.4.5.8
        name: concepts
        ports:
        - containerPort: 5000
        resources: {}
      restartPolicy: Always
status: {}
