.k8s/kustomize/live-autopilot/graphdb.deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: graphdb
  name: graphdb
spec:
  clusterIP: None
  ports:
  - name: "3030"
    port: 3030
  selector:
    app: graphdb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: graphdb
  name: graphdb
spec:
  replicas: 1
  strategy: {}
  selector:
    matchLabels:
      app: graphdb
  template:
    metadata:
      labels:
        app: graphdb
    spec:
      containers:
      - image: containers.officialstatistics.org/cslovell/sdg-docker-ontologies/graphdb:v0.4.5.8
        name: graphdb
        ports:
        - containerPort: 3030
        resources: {}
      restartPolicy: Always
status: {}
