.k8s/kustomize/live-autopilot/webapp.deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webapp
  name: webapp
spec:
  clusterIP: None
  ports:
  - name: "81"
    port: 81
  selector:
    app: webapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webapp
  name: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - env:
        - name: GET_HOSTS_FROM
          value: dns
        - name: GRAPHDB_PORT
          value: "720080"
        - name: GRAPHDB_REPO
          value: sdgs-data
        image: containers.officialstatistics.org/cslovell/sdg-docker-ontologies/webapp:v0.4.5.8
        name: webapp
        ports:
        - containerPort: 81
        resources: {}
      restartPolicy: Always
status: {}
